--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12">
-        <img style="max-width: 300px;" [src]="recipe.imagePath" [alt]="recipe.name" class="img-responsive">
+        <img style="max-width: 300px; max-height: 200px;" [src]="recipe.imagePath" [alt]="recipe.name" class="img-responsive">
     </div>
 </div>
 <div class="row">
@@ -16,9 +16,9 @@
                 Manage recipe <span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
-                <li><a href="#">To shopping list</a></li>
-                <li><a href="#">Edit recipe</a></li>
-                <li><a href="#">Delete recipe</a></li>
+                <li (click)="onToShoppingList()"><a>To shopping list</a></li>
+                <li><a>Edit recipe</a></li>
+                <li><a>Delete recipe</a></li>
             </ul>
         </div>
     </div>
@@ -27,5 +27,13 @@
     <div class="col-xs-12">{{ recipe.description }}</div>
 </div>
 <div class="row">
-    <div class="col-xs-12">Ingredients</div>
+    <div class="col-xs-12">
+        <ul class="list-group">
+            <li 
+                class="list-group-item"
+                *ngFor="let ingredient of recipe.ingredients">
+                {{ingredient.name}}  ({{ingredient.amount}})
+            </li>
+        </ul>
+    </div>
 </div>
