--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -6,6 +6,6 @@
 <hr>
 <div *ngFor="let item of recipes" class="row">
     <div class="col-xs-12">
-        <app-recipe-item [recipe]="item" (itemSelected)=(onItemSelected(item))></app-recipe-item>
+        <app-recipe-item [recipe]="item"></app-recipe-item>
     </div>
 </div>
