--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,8 +8,8 @@
           </div>
           <div class="navbar-collapse" [class.collapse]="collapsed" (window:resize)="collapsed = true">
             <ul class="nav navbar-nav">
-                <li (click)="onSelect('recipe')"><a>Recipes</a></li>
-                <li (click)="onSelect('shopping-list')"><a>Shopping List</a></li>
+                <li routerLinkActive="active" routerLink="/recipes"><a>Recipes</a></li>
+                <li routerLinkActive="active" routerLink="shopping-list"><a>Shopping List</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li appDropdown class="dropdown">
