--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -17,7 +17,7 @@
             </button>
             <ul class="dropdown-menu">
                 <li (click)="onToShoppingList()"><a>To shopping list</a></li>
-                <li><a>Edit recipe</a></li>
+                <li (click)="onEditRecipe()"><a>Edit recipe</a></li>
                 <li><a>Delete recipe</a></li>
             </ul>
         </div>
