--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,4 @@
-<a (click)="onSelect()" class="list-group-item clearfix">
+<a class="list-group-item clearfix" routerLinkActive="active" [routerLink]="['/recipes',id]">
     <div class="pull-left">
         <h4 class="list-group-item-heading">{{item.name}}</h4>
         <p class="list-group-item-text">{{item.description}}</p>
