--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,11 +1,11 @@
 <div class="row">
     <div class="col-xs-12">
-        <button class="btn btn-success pull-right">New Recipe</button>
+        <button routerLink="new" class="btn btn-success pull-right">New Recipe</button>
     </div>
 </div>
 <hr>
-<div *ngFor="let item of recipes" class="row">
+<div *ngFor="let item of recipes; let i = index;" class="row">
     <div class="col-xs-12">
-        <app-recipe-item [recipe]="item"></app-recipe-item>
+        <app-recipe-item [id]="i" [recipe]="item"></app-recipe-item>
     </div>
 </div>
