--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -3,7 +3,6 @@
         <app-recipe-list></app-recipe-list>
     </div>
     <div class="col-md-7">
-        <app-recipe-detail *ngIf="selectedItem ; else infoText" [recipe]="selectedItem" ></app-recipe-detail>
-        <ng-template #infoText>Select an Item to view the details</ng-template>
+        <router-outlet></router-outlet>
     </div>
 </div>
