--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,20 +1,33 @@
 <div class="row">
     <div class="col-xs-12">
-        <form>
+        <form (ngSubmit)="onAddItem(f)" #f="ngForm">
             <div class="row">
                 <div class="col-sm-5 form-group">
                     <label for="name">Name</label>
-                    <input type="text" id="name" class="form-control" #nameInput>
+                    <input 
+                    class="form-control" 
+                    type="text" 
+                    id="name" 
+                    name="name" 
+                    ngModel 
+                    required>
                 </div>
                 <div class="col-sm-2 form-group">
                     <label for="amount">Amount</label>
-                    <input type="number" id="amount" class="form-control" #amountInput>
+                    <input 
+                    class="form-control" 
+                    type="number" 
+                    id="amount"  
+                    name="amount" 
+                    ngModel 
+                    required
+                    pattern="^[1-9]+[0-9]*$">
                 </div>
             </div>
             <div class="row col-sm-12">
-                <button class="btn btn-success" type="button" (click)="onAdd()">Add</button>
-                <button class="btn btn-danger" type="button">Delete</button> 
-                <button class="btn btn-primary" type="button">Clear</button>
+                <button [disabled]="!f.valid" class="btn btn-success" type="submit">{{ editMode? 'Update' : 'Add' }}</button>
+                <button class="btn btn-danger" type="button" *ngIf="editMode" (click)="onDelete()">Delete</button> 
+                <button class="btn btn-primary" type="button" (click)="onClear()">Clear</button>
             </div>
         </form>
     </div>
